# UH-Programming-Languages-Paradigms

./: README.md  demo_for_repo.txt
assign1/: assign1.txt
assign1/go/: build.sh  go.mod
assign1/python/: .svnignore  build.sh  pavement.py
assign1/scala/: .svnignore  build.sbt
assign2/: assign2.txt
assign2/erlang/: build.sh  rebar.config
assign2/haskell/: build.sh  uhplfib.cabal
assign2/haskell/src/Fibonacci/: Iterative.hs  Recursive.hs  TailRecursive.hs
assign2/haskell/test/: FibonacciTest.hs  IterativeTest.hs  RecursiveTest.hs  TailRecursiveTest.hs
assign2/ocaml/: build.sh
assign2/ocaml/test/: dune  fibonacci_test.ml  iterative_test.ml  recursive_test.ml  tailRecursive_test.ml
assign3/: assign3.txt
assign3/kotlin/: .svnignore  build.gradle.kts
assign3/ruby/: .svnignore  Gemfile  test.txt
assign4/: assign4.txt
assign4/f#/: f#.sln  run.sh
assign4/javascript/: .svnignore  build.sh  package.json  run.sh  test.txt
hw1/: hw1.txt
hw2/: hw2.txt
hw3/: hw3.txt
hw3/clojure/: project.clj
hw4/: hw4.txt
midterm1/q01/: question.erl  question.txt
midterm1/q02/: question.txt
midterm1/q03/: question.erl  question.txt
midterm1/q04/: build.sh  question.erl  question.txt
midterm1/q05/: question.txt
midterm1/q06/: question.txt
midterm1/q07/: question.txt
midterm1/q08/: question.txt
midterm1/q09/: question.erl  question.txt
midterm1/q10/: question.txt
midterm2/q01/: question.txt
midterm2/q02/: Fibonacci.rb  build.sh  question.txt
midterm2/q03/: question.txt  tuple.hs  tuple.py
midterm2/q04/: question.js
midterm2/q05/: question.txt
midterm2/q06/: question.txt
midterm2/q07/: .svnignore  Fibonacci.fs  build.sh  f#.fsproj  (+1 more)
reviews/: assign1reviews.txt  assign2reviews.txt  assign3reviews.txt  assign4reviews.txt  hw1reviews.txt  hw2reviews.txt  hw3reviews.txt
(+45 files in other folders)
